--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ markdown: kramdown
 
 # Other options
 permalink: blog/:year/:month/:title/
-jobtitle: "Assitant Professor"
+jobtitle: "Assistant Professor"
 address: |
     Department of Computer Science,
     University of Colorado,
