--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -10,8 +10,8 @@
 - title: "Publications"
   href: "/publications/"
 
-#- title: "Research"
-#  href: "/research/"
+- title: "Research"
+  href: "/research/"
 
 - title: "Teaching"
   href: "/teaching/"
