DSV course link incorrect from the menu

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -17,4 +17,4 @@
   href: "/teaching/"
   subcategories:
     - subtitle: "CSCI7000 – Distributed Systems Verification"
-      subhref: "https://gowthamk.github.io/csci7000_f20/"
+      subhref: "https://gowthamk.github.io/csci7000_s21/"
