--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -18,5 +18,5 @@
   subcategories:
     - subtitle: "CSCI7000 – Distributed Systems Verification"
       subhref: "https://gowthamk.github.io/csci7000_s21/"
-    - subtitle: "CSCI3155 – Principles of Programming Languages"
-      subhref: "https://canvas.colorado.edu/courses/69695"
+    - subtitle: "CSCI5535 – Foundations of Programming Languages"
+      subhref: "https://csci5535.github.io/"
