--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -16,7 +16,9 @@
 - title: "Teaching"
   href: "/teaching/"
   subcategories:
-    - subtitle: "CSCI7000 – Distributed Systems Verification"
+    - subtitle: "CSCI7000-01 – Distributed Systems Verification"
       subhref: "https://gowthamk.github.io/csci7000_s21/"
     - subtitle: "CSCI5535 – Foundations of Programming Languages"
       subhref: "https://csci5535.github.io/"
+    - subtitle: "CSCI7000-11 – Foundations of Programming Languages"
+      subhref: "https://gowthamk.github.io/csci7000_pfp_s23/"
