--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -20,5 +20,5 @@
       subhref: "https://gowthamk.github.io/csci7000_s21/"
     - subtitle: "CSCI5535 – Foundations of Programming Languages"
       subhref: "https://csci5535.github.io/"
-    - subtitle: "CSCI7000-11 – Foundations of Programming Languages"
+    - subtitle: "CSCI7000-11 – Pinciples of Functional Programming"
       subhref: "https://gowthamk.github.io/csci7000_pfp_s23/"
