--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,8 @@
 - title: "About"
   href: "/"
 
-- title: "Blog"
-  href: "/blog/"
+# - title: "Blog"
+#   href: "/blog/"
 
 # - title: "CV"
 #   href: "/cv/"
@@ -13,8 +13,8 @@
 - title: "Research"
   href: "/research/"
 
-- title: "Teaching"
-  href: "/teaching/"
-  subcategories:
-    - subtitle: "CSCI7000-11 – Principles of Functional Programming"
-      subhref: "https://gowthamk.github.io/csci7000_pfp_s23/"
+# - title: "Teaching"
+#   href: "/teaching/"
+#   subcategories:
+#     - subtitle: "CSCI7000-11 – Principles of Functional Programming"
+#       subhref: "https://gowthamk.github.io/csci7000_pfp_s23/"
