--- a/docs/research-statement/Makefile
+++ b/docs/research-statement/Makefile
@@ -1,16 +1,12 @@
 all:
 	pdflatex -shell-escape statement
-	pdflatex -shell-escape statement
-	bibtex statement
 	bibtex statement
 	pdflatex -shell-escape statement
-	bibtex statement
 	pdflatex -shell-escape statement
-	open statement.pdf
 
 haste:
 	pdflatex -shell-escape statement
 	open statement.pdf
 
 clean:
-	rm *.log *.aux *.bbl
+	rm *.log *.aux *.bbl *.blg *.out
