--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,8 @@
 - title: "About"
   href: "/"
 
-# - title: "Blog"
-#   href: "/blog/"
+- title: "Blog"
+  href: "/blog/"
 
 # - title: "CV"
 #   href: "/cv/"
